--- a/dev/css/sass/item.scss
+++ b/dev/css/sass/item.scss
@@ -19,6 +19,7 @@
 				}
 				
 				p{ font-size: 1em; }
+				
 				@media screen and (min-width: 1345px){ p{ font-size: 1.2em; } }
 				
 				.blockquote{
@@ -29,10 +30,10 @@
 					padding: 0 0 0 22.5px;
 					position: relative;
 					
-					p.quote:before{
+					p.quote:before, p.quote::before{
 						
 						font-family: "MillerHeadline Bold",Cambria,Georgia,serif;
-						content: "\201C";
+						content: "“";
 						font-size: 4em;
 						position: absolute;
 						left: -27px;
@@ -52,10 +53,10 @@
 						padding: 0 0 0 12.5px;
 						position: relative;
 						
-						p.quote:before{
+						p.quote:before, p.quote::before{
 							
 							font-family: "MillerHeadline Bold",Cambria,Georgia,serif;
-							content: "\201C";
+							content: "“";
 							font-size: 4em;
 							position: absolute;
 							left: -27px;
