--- a/dev/css/sass/layout.scss
+++ b/dev/css/sass/layout.scss
@@ -85,9 +85,8 @@ h2#hammer{
 
 .breaker{
 	
-	//margin: 0 auto;
-	font-size: 2em;
-	text-align: center;
+	margin: 20px auto 30px auto;
+	max-width: 200px;
 	
 }
 
@@ -130,7 +129,7 @@ h2#hammer{
 		
 		figure{
 		
-			max-width: 180px;
+			max-width: 75px;
 			
 			figcaption{
 				font-style: italic;
@@ -138,14 +137,31 @@ h2#hammer{
 			}
 			
 		}
-		
+		@media screen and (min-width: 665px){ 
+			figure { 
+				max-width: 130px; 
+			} 
+		} 
 		@media screen and (min-width: 1005px){ 
-			figure { margin-right: -30px; } 
+			figure { 
+				max-width: 180px;
+				margin-right: -30px; 
+			} 
 		} 
 		
 		p{
 			font-size: 1.2em;
-			line-height: 1.8em;
+			line-height: 2.4em;
+			
+			&.dropcap::first-letter{
+				float: left;
+				font-size: 5em;
+// 				line-height: .5em;
+				padding-right: 10px;
+				padding-top: .2em;
+				padding-bottom: 0;
+				font-family: Cambria, Georgia, serif;
+			}
 			
 		}
 	}
